:sparkles: Añadiendo más navegación del sitio - I

--- a/divisiones.html
+++ b/divisiones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LoL Esports</title>
+    <title>Divisiones</title>
 </head>
 <body>
     <header>
@@ -15,11 +15,8 @@
             <a href="divisiones.html">Divisiones</a>
             <a href="extras.html">Extras</a>
         </nav>
-        <h3>Bienvenido al mundo del League of Legends (modo profesional)</h3>
-        <h4>Las mejores regiones, los mejores equipos, todos compitiendo por ser el mejor del mundo!</h4>
-        <p>Conoce un poco el origen de este deporte, la pasión detrás del juego y hazte un pro player!<br>
-            con perseverancia todo se puede en esta vida xd.
-        </p>
+        <p>Aqui van las regiones, los equipos y por supuesto, todos los premios ganados</p>
+        <p>SKT mejor equipo del mundo por siempre (conocido ahora como T1)</p>
     </header>
 
     <section>
