--- a/extras.html
+++ b/extras.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LoL Esports</title>
+    <title>Extras</title>
 </head>
 <body>
     <header>
@@ -15,11 +15,7 @@
             <a href="divisiones.html">Divisiones</a>
             <a href="extras.html">Extras</a>
         </nav>
-        <h3>Bienvenido al mundo del League of Legends (modo profesional)</h3>
-        <h4>Las mejores regiones, los mejores equipos, todos compitiendo por ser el mejor del mundo!</h4>
-        <p>Conoce un poco el origen de este deporte, la pasión detrás del juego y hazte un pro player!<br>
-            con perseverancia todo se puede en esta vida xd.
-        </p>
+        <p>Posiblemente información de las ligas de rankeds, streamers y poco mas xd</p>
     </header>
 
     <section>
