:lipstick: Estilo al navbar - Isaac

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>LoL Esports</title>
 </head>
 <body>
     <header>
         <h1>LoL Esports</h1>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="historia.html">Historia</a>
-            <a href="divisiones.html">Divisiones</a>
-            <a href="extras.html">Extras</a>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="historia.html">Historia</a></li>
+                <li><a href="divisiones.html">Divisiones</a></li>
+                <li><a href="extras.html">Extras</a></li>
+            </ul>
         </nav>
         <h3>Bienvenido al mundo del League of Legends (modo profesional)</h3>
         <h4>Las mejores regiones, los mejores equipos, todos compitiendo por ser el mejor del mundo!</h4>
