:speech_balloon: Guayola de lolpro - Isaac

--- a/historia.html
+++ b/historia.html
@@ -56,7 +56,8 @@
             <li>Turkish Championship League (TCL), principal liga de Turquía.</li>
             <li>Vietnam Championship Series (VCS), principal liga de Vietnam</li>
         </ol>
-        <a class="btn btn-primary" href="#" role="button">Más Información</a>
+        <a class="btn btn-primary" href="lolpro.html" role="button">Más Información</a>
+
     </section>
     <footer>
         IJGL Productions. 2022 Derechos reservados.
