--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <div class="navbar-nav">
                 <a class="nav-link active" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="historia.html">Historia</a>
-                <a class="nav-link" href="divisiones.html">Divisiones</a>
+                <a class="nav-link" href="lolpro.html">LoL Competitivo</a>
                 <a class="nav-link" href="extras.html">Extras</a>
               </div>
             </div>
