:speech_balloon: Terminando info lolpro - Isaac

--- a/extras.html
+++ b/extras.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <title>Extras</title>
 </head>
 <body>
@@ -12,14 +14,13 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="historia.html">Historia</a>
-            <a href="divisiones.html">Divisiones</a>
+            <a href="lolpro.html">LoL Competitivo</a>
             <a href="extras.html">Extras</a>
         </nav>
-        <p>Posiblemente información de las ligas de rankeds, streamers y poco mas xd</p>
     </header>
 
     <section>
-
+        <p>Posiblemente información de las ligas de rankeds, streamers y poco mas xd</p>
     </section>
     <footer>
         IJGL Productions. 2022 Derechos reservados.
