--- a/lolpro.html
+++ b/lolpro.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Divisiones</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <title>LoL Competitivo</title>
 </head>
 <body>
     <header>
@@ -150,6 +152,72 @@
                     <td>1G+1P</td>
                     <td>GAM Esports (2021)</td>
                     <td>Team Flash (2020)</td>
+                </tr>
+                <tr>
+                    <th scope="row">Campeonato Brasileiro de League of Legends</th>
+                    <td>CBLOL</td>
+                    <td>Brazil</td>
+                    <td>Brazilian, Portuguese</td>
+                    <td>Sao Paulo</td>
+                    <td>2012</td>
+                    <td>1P</td>
+                    <td>PaiN Gaming (2021)</td>
+                    <td>RED Canids (2021)</td>
+                </tr>
+                <tr>
+                    <th scope="row">League of Legends Circuit Oceania</th>
+                    <td>LCO</td>
+                    <td>Oceania</td>
+                    <td>English</td>
+                    <td>online</td>
+                    <td>2021</td>
+                    <td>1P</td>
+                    <td>Pentanet.GG (2021)</td>
+                    <td>PEACE (2021)</td>
+                </tr>
+                <tr>
+                    <th scope="row">League of Legends Continental League</th>
+                    <td>LCL</td>
+                    <td>Commonwealth of Independent States</td>
+                    <td>Russian</td>
+                    <td>Moscow</td>
+                    <td>2016</td>
+                    <td>1P</td>
+                    <td>Unicorns of Love (2021)</td>
+                    <td>Unicorns of Love (2021)</td>
+                </tr>
+                <tr>
+                    <th scope="row">League of Legends Japan League</th>
+                    <td>LJL</td>
+                    <td>Japan</td>
+                    <td>Japanese</td>
+                    <td>Tokyo</td>
+                    <td>2014</td>
+                    <td>1P</td>
+                    <td>DetonatioN FocusMe (2021)</td>
+                    <td>DetonatioN FocusMe (2021)</td>
+                </tr>
+                <tr>
+                    <th scope="row">Liga Latinoamérica</th>
+                    <td>LLA</td>
+                    <td>Latin America</td>
+                    <td>Spanish</td>
+                    <td>Mexico City</td>
+                    <td>2019</td>
+                    <td>1P</td>
+                    <td>Infinity Esports (2021)</td>
+                    <td>Infinity Esports (2021)</td>
+                </tr>
+                    <tr>
+                    <th scope="row">Turkish Championship League</th>
+                    <td>TCL</td>
+                    <td>Turkey</td>
+                    <td>Turkish</td>
+                    <td>Istanbul</td>
+                    <td>2015</td>
+                    <td>1P</td>
+                    <td>Istanbul Wildcats (2021)</td>
+                    <td>Galatasaray (2021)</td>
                 </tr>
             </tbody>
         </table>
