:lipstick: Muchos cambios de estilo - Isaac

--- a/lolpro.html
+++ b/lolpro.html
@@ -19,12 +19,20 @@
         </nav>
     </header>
 
-    <section>
-        <h2>Lista de Ligas y Torneos de League of Legends</h2>
-        <p>League of Legends es un juego de esports ampliamente jugado tanto a nivel amateur como profesional. Esta es una lista de las competiciones de League of Legends organizadas o 
-            patrocinadas por el editor del juego, Riot Games.</p>
-        
-        <h3>Torneos Internacionales</h3>  
+    <section class="first-container">
+        <div class="container-wrapped">
+            <div class="text-container">
+                <h2>Lista de Ligas y Torneos de League of Legends</h2>
+                <p>League of Legends es un juego de esports ampliamente jugado tanto a nivel amateur como profesional. Esta es una lista de las competiciones de League of Legends organizadas o 
+                patrocinadas por el editor del juego, Riot Games.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="second-container">
+        <div class="container-wrapper">
+            <div class="text-container">
+                <h3>Torneos Internacionales</h3>  
         <table class="table">
             <thead class="thead-light">
                 <tr>
@@ -55,9 +63,15 @@
                 </tr>
             </tbody>
         </table>
+            </div>
+        </div>
+    </section>
 
-        <h3>Ligas Tier 1</h3>
-        <p>A partir de 2021, hay 12 ligas profesionales para League of Legends en todo el mundo. 
+    <section class="third-container">
+        <div class="container-wrapper">
+            <div class="text-container">
+                <h3>Ligas Tier 1</h3>
+            <p>A partir de 2021, hay 12 ligas profesionales para League of Legends en todo el mundo. 
             Para el Campeonato mundial, a la LEC, LPL, LCS y LCK se les asignan tres lugares cada una, a pcs y 
             VCS se les asignan dos lugares, y a las seis regiones emergentes se les asigna un lugar cada una. 
             Un lugar se otorga en el Mid-Season Invitational (MSI) a la región del campeón de MSI, y un último 
@@ -221,6 +235,8 @@
                 </tr>
             </tbody>
         </table>
+            </div>
+        </div>
     </section>
 
     <footer>
