:lipstick: Ultimos retoques uwu - Isaac

--- a/historia.html
+++ b/historia.html
@@ -30,7 +30,7 @@
                         <a href="index.html" class="navbar-links">Inicio</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="historia.html" class="navbar-links">historia</a>
+                        <a href="historia.html" class="navbar-links">Historia</a>
                     </li>
                     <li class="navbar-item">
                         <a href="lolpro.html" class="navbar-links">LoL Competitivo</a>
@@ -83,34 +83,34 @@
         <div class="container-wrapper">
             <div class="text-container">
                 <h2>Historia de torneos y campeonatos</h2>
-        <p>Existen multitud de ligas y torneos de League of Legends, algunos organizados por Riot Games, otros por terceros con respaldo oficial, y otros independientes. Aquellos organizados o con respaldo oficial de Riot Games podrían resumirse en el Torneo Mundial, para el que se clasifican los mejores equipos de cada continente; los torneos de Tier 1, en los que se deciden los equipos de cada región que irán al mundial 
-            (como la LEC en Europa); y los torneos nacionales de Tier 2, que dependiendo de la región/continente, pueden tener categoría Challenger para promocionar a la Tier 1 (como la League of Legends Challenger de Corea) o puntuar para torneos independientes (como la SLO de España, que permite aspirar a participar en la European Masters).</p>
-        <h3>Ligas Internacionales</h3>
-        <h4>Series Mundiales y Clasificatorias Regionales (Tier 1)</h4>
-        <ul>
-            <li>League of Legends World Championship (Mundiales): Es la máxima categoría competitiva anual, organizada por Riot Games, que enfrenta a los mejores equipos de cada continente. La cita mundial consta de una fase previa o Play-In, donde equipos de todas las regiones (excepto los dos mejores equipos de las Grandes Ligas Regionales) se enfrentan en 4 grupos de 3 equipos, donde los dos mejores clasificados 
-                clasifican a las eliminatorias donde los vencedores logran avanzar a Fase de Grupos del "Main Event". La fase de grupos se divide en 4 grupos de 4 equipos, quienes se eligen al azar y se enfrentan dos veces. Los dos mejores equipos de cada grupo clasifican a las fases eliminatorias, las cuales constan de Cuartos de Final, Semifinales y la Gran Final. La primera edición de los "Worlds" se llevó a cabo en 
-                Suecia en el año 2011, en la ciudad de Jönköping,40​ y finalizó con victoria de Fnatic, representante de la región europea. El equipo estaba compuesto por los siguientes jugadores profesionales: Mellisan, Cyanide, xPeque, hegispok y Shushei.41​</li>
-            </br>
-            <li>League of Legends Mid Season Invitational (MSI): Es el segundo torneo internacional en importancia, un "premundial" jugado a mitad de temporada y con un esquema de clasificación muy similar al Mundial. Su primera edición fue en 2015, con victoria de Edward Gaming, representante de la región china.</li>
-        </ul>
-        <p>Las series clasificatorias regionales (Tier 1) Deciden los equipos que representan a cada región en las series mundiales se deciden en sus respectivas series regionales, siendo las principales 5 Grandes Ligas quienes obtienen cupos directos a la Fase de Grupos del League of Legends World Championship y al League of Legends Mid-Season Invitational. El resto de ligas regionales obtienen cupos a la Fase Previa o 
-            Play-In de las citas mundiales.</p>
-        <ol>
-            <li>League of Legends Championship Series (LCS), principal liga de Norteamérica.</li>
-            <li>League of Legends European Championship (LEC), principal liga de Europa.</li>
-            <li>League of Legends Pro League (LPL), principal liga de China.</li>
-            <li>League of Legends Champions Korea (LCK), liga principal de Corea.</li>
-            <li>League of Legends Pacific Championship Series (PCS),  liga que reúne a las regiones de Taiwán, Hong Kong, Macao y el sudeste asiático.</li>
-            <li>Campeonato Brasileiro de League of Legends (CBLoL), principal liga de Brasil.</li>
-            <li>Liga Latinoamérica (LLA), principal liga de Latinoamérica. (SOMOS MALISIMOS KEKW)</li>
-            <li>League of Legends Continental League (LCL), principal liga de la Comunidad de Estados Independientes.</li>
-            <li>League of Legends Japan League (LJL), principal liga de Japón.</li>
-            <li>League of Legends Circuit Oceania (LCO), principal liga de Oceanía.</li>
-            <li>Turkish Championship League (TCL), principal liga de Turquía.</li>
-            <li>Vietnam Championship Series (VCS), principal liga de Vietnam</li>
-        </ol>
-        <a class="btn btn-primary" href="lolpro.html" role="button">Más Información</a>
+                <p>Existen multitud de ligas y torneos de League of Legends, algunos organizados por Riot Games, otros por terceros con respaldo oficial, y otros independientes. Aquellos organizados o con respaldo oficial de Riot Games podrían resumirse en el Torneo Mundial, para el que se clasifican los mejores equipos de cada continente; los torneos de Tier 1, en los que se deciden los equipos de cada región que irán al mundial 
+                    (como la LEC en Europa); y los torneos nacionales de Tier 2, que dependiendo de la región/continente, pueden tener categoría Challenger para promocionar a la Tier 1 (como la League of Legends Challenger de Corea) o puntuar para torneos independientes (como la SLO de España, que permite aspirar a participar en la European Masters).</p>
+                <h3>Ligas Internacionales</h3>
+                <h4>Series Mundiales y Clasificatorias Regionales (Tier 1)</h4>
+                <ul>
+                    <li>League of Legends World Championship (Mundiales): Es la máxima categoría competitiva anual, organizada por Riot Games, que enfrenta a los mejores equipos de cada continente. La cita mundial consta de una fase previa o Play-In, donde equipos de todas las regiones (excepto los dos mejores equipos de las Grandes Ligas Regionales) se enfrentan en 4 grupos de 3 equipos, donde los dos mejores clasificados 
+                        clasifican a las eliminatorias donde los vencedores logran avanzar a Fase de Grupos del "Main Event". La fase de grupos se divide en 4 grupos de 4 equipos, quienes se eligen al azar y se enfrentan dos veces. Los dos mejores equipos de cada grupo clasifican a las fases eliminatorias, las cuales constan de Cuartos de Final, Semifinales y la Gran Final. La primera edición de los "Worlds" se llevó a cabo en 
+                        Suecia en el año 2011, en la ciudad de Jönköping,40​ y finalizó con victoria de Fnatic, representante de la región europea. El equipo estaba compuesto por los siguientes jugadores profesionales: Mellisan, Cyanide, xPeque, hegispok y Shushei.41​</li>
+                    </br>
+                    <li>League of Legends Mid Season Invitational (MSI): Es el segundo torneo internacional en importancia, un "premundial" jugado a mitad de temporada y con un esquema de clasificación muy similar al Mundial. Su primera edición fue en 2015, con victoria de Edward Gaming, representante de la región china.</li>
+                </ul>
+                <p>Las series clasificatorias regionales (Tier 1) Deciden los equipos que representan a cada región en las series mundiales se deciden en sus respectivas series regionales, siendo las principales 5 Grandes Ligas quienes obtienen cupos directos a la Fase de Grupos del League of Legends World Championship y al League of Legends Mid-Season Invitational. El resto de ligas regionales obtienen cupos a la Fase Previa o 
+                    Play-In de las citas mundiales.</p>
+                <ol>
+                    <li>League of Legends Championship Series (LCS), principal liga de Norteamérica.</li>
+                    <li>League of Legends European Championship (LEC), principal liga de Europa.</li>
+                    <li>League of Legends Pro League (LPL), principal liga de China.</li>
+                    <li>League of Legends Champions Korea (LCK), liga principal de Corea.</li>
+                    <li>League of Legends Pacific Championship Series (PCS),  liga que reúne a las regiones de Taiwán, Hong Kong, Macao y el sudeste asiático.</li>
+                    <li>Campeonato Brasileiro de League of Legends (CBLoL), principal liga de Brasil.</li>
+                    <li>Liga Latinoamérica (LLA), principal liga de Latinoamérica. (SOMOS MALISIMOS KEKW)</li>
+                    <li>League of Legends Continental League (LCL), principal liga de la Comunidad de Estados Independientes.</li>
+                    <li>League of Legends Japan League (LJL), principal liga de Japón.</li>
+                    <li>League of Legends Circuit Oceania (LCO), principal liga de Oceanía.</li>
+                    <li>Turkish Championship League (TCL), principal liga de Turquía.</li>
+                    <li>Vietnam Championship Series (VCS), principal liga de Vietnam</li>
+                </ol>
+                <a class="btn btn-primary" href="lolpro.html" role="button" id="btn-masinfo">Más Información</a>
             </div>
         </div>
     </section>     
@@ -125,7 +125,7 @@
                             <input type="text" placeholder="Usuario">
                         </div>
                         <div class="inputBox">
-                            <input type="submit" value="Buscar">
+                            <input type="button" onclick="alert('No funciona xd')" value="Buscar" id="btn-Buscar"/>
                         </div>
                     </div>
                     <div class="footer-links-items">
