--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <title>LoL homenaje</title>
+    <title>League of Legends</title>
 </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
                         <a href="index.html" class="navbar-links">Inicio</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="historia.html" class="navbar-links">historia</a>
+                        <a href="historia.html" class="navbar-links">Historia</a>
                     </li>
                     <li class="navbar-item">
                         <a href="lolpro.html" class="navbar-links">LoL Competitivo</a>
@@ -44,12 +44,33 @@
     </header>
 
     <section class="main">
-        <h3>Bienvenido al mundo del League of Legends (modo profesional)</h3>
-        <h4>Las mejores regiones, los mejores equipos, todos compitiendo por ser el mejor del mundo!</h4>
-        <p>Conoce un poco el origen de este deporte, la pasión detrás del juego y hazte un pro player!<br>
-            con perseverancia todo se puede en esta vida xd.
-        </p>
+        <h1>Bienvenido al mundo del League of Legends</h1>
+        <p>En esta pequeña página encontrarás un poquito de información acerca del juego MOBA que roba la vida de mucha
+            gente y que tiene una de las comunidades de gamers más bonitas y tóxicas de todos los tiempos.</p>
+        <p>Conoce un poco el origen de este deporte, la pasión detrás del juego y hazte un pro player!
+            con perseverancia todo se puede en esta vida xd.</p>
+        <div class="services">
+            <h2>Explora todas las posibilidades</h2>
+            <div class="services-container">
+                <div class="services-card">
+                    <img src="https://www.gamereactor.es/media/34/arcaneleaguelegends_3643403b.jpg" alt="HistoriaLoL">
+                    <h3>Historia del LoL</h3>
+                    <a class="btn btn-primary" href="historia.html" role="button">Ver más</a>
+                </div>
+                <div class="services-card">
+                    <img src="https://pbs.twimg.com/media/Cv_wJiIUMAAr5M-.jpg" alt="LoLEsports">
+                    <h3>LoL Esports</h3>
+                    <a class="btn btn-primary" href="lolpro.html" role="button">Ver más</a>
+                </div>
+                <div class="services-card">
+                    <img src="https://preview.redd.it/sjwfsf97onx51.jpg?width=370&format=pjpg&auto=webp&s=b10ace6045f53ba0d620ec8a7b2d7b8ceb2820c8" alt="Extrasimg">
+                    <h3>Contenido Extra</h3>
+                    <a class="btn btn-primary" href="extras.html" role="button">Ver más</a>
+                </div>
+            </div>
+        </div>
     </section>
+
     <footer>
         <div class="footer-container">
             <div class="footer-links">
@@ -60,7 +81,7 @@
                             <input type="text" placeholder="Usuario">
                         </div>
                         <div class="inputBox">
-                            <input type="submit" value="Buscar">
+                            <input type="button" onclick="alert('No funciona xd')" value="Buscar" id="btn-Buscar"/>
                         </div>
                     </div>
                     <div class="footer-links-items">
