--- a/lolpro.html
+++ b/lolpro.html
@@ -30,7 +30,7 @@
                         <a href="index.html" class="navbar-links">Inicio</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="historia.html" class="navbar-links">historia</a>
+                        <a href="historia.html" class="navbar-links">Historia</a>
                     </li>
                     <li class="navbar-item">
                         <a href="lolpro.html" class="navbar-links">LoL Competitivo</a>
@@ -273,7 +273,7 @@
                             <input type="text" placeholder="Usuario">
                         </div>
                         <div class="inputBox">
-                            <input type="submit" value="Buscar">
+                            <input type="button" onclick="alert('No funciona xd')" value="Buscar" id="btn-Buscar"/>
                         </div>
                     </div>
                     <div class="footer-links-items">
